docs: Add comprehensive deployment guide and README
- Create DEPLOYMENT.md with step-by-step GitHub Secrets setup
- Add detailed README.md with project overview and quick start
- Update GitHub Actions workflow to support environment variables
- Document backend deployment options (Railway, Render, Vercel)
- Include troubleshooting section and support links
- Use placeholder examples for API keys to avoid security issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          # Add any build-time environment variables here
+          VITE_API_URL: ${{ secrets.VITE_API_URL }}
 
       - name: SPA fallback (index -> 404)
         run: cp dist/index.html dist/404.html
